# Learn_Rust_________________________MyWords

./: .gitignore  README.md
api/: Cargo.toml
api/config/: default.json  dev.json  prod.json
api/migrations/: 20220828214534_init.sql
api/src/: app_config.rs  lib.rs  main.rs
api/src/db/: common.rs  mod.rs  models.rs  sqlite_client.rs  users.rs
