[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.15"
hyper = { version = "0.14.20", features = ["full"] }
tokio = { version = "1.20.1", features = ["full"] }
tower = "0.4.13"
serde_json = "1.0.85"
serde = "1.0.97"

config = "0.13.2"

sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "sqlite", "chrono"] }
chrono = { version = "0.4.22", features = [ "serde" ] }
anyhow = "1.0.62"

[[bin]]
name = "test"
path = "src/bin/test.rs"